Tabela básica em HTML5

--- a/HTML-CSS/Exercicios/EX019/tabela01.html
+++ b/HTML-CSS/Exercicios/EX019/tabela01.html
@@ -12,20 +12,14 @@
         table {
             width: 300px;
             border-collapse: collapse;
-            
+            height: 300px;
         }
 
         td {
             border: 1px solid black;
             padding: 3px;
-        }
-
-        tr.linha {
-            background-color: rgba(128, 128, 128, 0.37);
-        }
-
-        tr.linha2 {
-            background-color: rgb(66, 61, 61);
+            text-align: left;
+            vertical-align: top;
         }
 
     </style>
