--- a/HTML-CSS/Exercicios/EX019/tabela2.html
+++ b/HTML-CSS/Exercicios/EX019/tabela2.html
@@ -14,6 +14,10 @@
             border-collapse: collapse;
         }
 
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
+        }
+
         td, th {
             border: 1px solid black;
             
