--- a/HTML-CSS/Exercicios/ex24/grid01/index.html
+++ b/HTML-CSS/Exercicios/ex24/grid01/index.html
@@ -11,7 +11,11 @@
         display: grid;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto;
-        gap: 25px;
+        gap: 10px;
+        align-items: normal;
+        justify-items: normal;
+        align-content: space-around;
+        justify-content: normal;
       }
 
       div.item {
