--- a/HTML-CSS/Exercicios/ex24/grid04/index.html
+++ b/HTML-CSS/Exercicios/ex24/grid04/index.html
@@ -11,6 +11,7 @@
         <div class="caixa1">Caixa 1</div>
         <div class="caixa2">Caixa 2</div>
         <div class="caixa3">Caixa 3</div>
+        <div class="caixa4">Caixa 4</div>
     </div>
 </body>
 </html>
